--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     href="https://fonts.googleapis.com/css2?family=Sniglet&display=swap"
     rel="stylesheet"
   />
+  <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Metronome</title>
