--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
     href="https://fonts.googleapis.com/css2?family=Sniglet&display=swap"
     rel="stylesheet"
   />
-  <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/blocks.css/dist/blocks.min.css"
+  />
   <link rel="stylesheet" type="text/css" href="style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Metronome</title>
 </head>
 <body>
-  <main class="box">
+  <main class="box block">
     <div class="wrapper">
       <div class="label time-signature">
         <select class="form-element label" id="note-type">
