We are live baby

--- a/index.html
+++ b/index.html
@@ -56,12 +56,13 @@
           <option value="16">16</option>
           <option value="32">32</option>
         </select>
-        <span id="tempo-value">at 120 bpm</span>
+        <span id="tempo-value" style="padding-left: 4px;">at 120 bpm</span>
       </div>
       <label id="beat-counter" class="label counter">1</label>
     </div>
 
     <input
+      class="block wrapper"
       id="tempo"
       value="120"
       type="range"
@@ -93,9 +94,16 @@
   </section>
 
   <footer>
-    <a id="toggle-options" href="#">Options</a>
-    <a href="https://github.com/joereynolds/metronome">Source Code</a>
-    <a href="https://joereynoldsaudio.com/">Me</a>
+    <a id="toggle-options" class="block inline" href="#">Options</a>
+    <a
+      href="https://github.com/asyraffff/metronome"
+      target="_blank"
+      rel="noopener noreferrer"
+      >Source Code</a
+    >
+    <a href="https://asyrafff.com/" target="_blank" rel="noopener noreferrer"
+      >Me</a
+    >
   </footer>
 </body>
 
